infra/services/gateway/traefik-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-http-to-https
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
