infra/services/gateway/traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: dashboard
      name: dashboard
  selector:
    app.kubernetes.io/name: traefik
